# ic-parser

./: .gitignore  CMakeLists.txt  README.md
example/: .gitignore  CMakeLists.txt  demo.c
src/: ic-parser.c  ic-parser.h
